--- a/style.css
+++ b/style.css
@@ -11,9 +11,9 @@
 	left: calc(var(--left) - var(--radius));
 }
 body {
-	overflow: hidden;
-	--top: 0;
-	transform: translateY(calc(50vh - var(--top)));
+	overflow-x: hidden;
+	/* --top: 0; */
+	/* transform: translateY(calc(50vh - var(--top))); */
 	background-color: gray;
 }
 .text {
